<resources>
    <string name="app_name">QuanLyPhongTro</string>
    <string name="title_DangNhap">Đăng Nhập</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="timtro">Tìm trọ</string>
    <string name="trangchu">Trang chủ</string>
    <string name="canhan">Cá nhân</string>
    <string name="cactindadang">Các tin đã đăng</string>
    <string name="dangtin">Đăng tin</string>
    <string name="themhinhanh">Thêm hình ảnh:</string>
    <string name="thongtincoban">Thông tin cơ bản:</string>
    <string name="tieude">Tiêu đề:</string>
    <string name="motathem">Mô tả thêm:</string>
    <string name="giaphong">Giá phòng:</string>
    <string name="dientich">Diện tích:</string>
    <string name="dienthoai">Điện thoại:</string>
    <string name="diachi">Địa chỉ:</string>
    <string name="phong_tro_online">Phòng Trọ Online</string>
    <string name="dangki">Đăng kí</string>
    <string name="nhaplaimatkhau">Nhập lại mật khẩu</string>
    <string name="dangkiTitle">ĐĂNG KÍ</string>
    <string name="decriptipn">Decriptipn</string>
    <string name="tilte">Tilte</string>
    <string name="price">Price</string>
    <string name="acreage">Acreage</string>
    <string name="title_purchase">Title Purchase</string>
    <string name="luu">Lưu</string>
    <string name="thongtinchitiet">Thông tin chi tiết</string>
    <string name="numberphone">Số điện thoại</string>
    <string name="name">Họ và tên</string>
    <string name="title">Title Purchase</string>
</resources>
