<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_backgroud"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.anhtuan.quanlyphongtro.login.LogInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/phong_tro_online"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_nhap"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/dang_nhap" />

            <EditText
                android:id="@+id/edt_taikhoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/email"
                android:maxLines="1"
                android:singleLine="true"
                android:text="anhtuancocuc@gmail.com" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:scaleX="1.3"
                android:scaleY="1.3"
                android:src="@drawable/icon05" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/matkhau"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="123456"
                tools:ignore="TextFields" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_dangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_button_dangnhap"
        android:text="@string/dangnhap"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_dangki"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/shape_button_dangnhap"
        android:text="@string/dangki"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="20sp" />


    <ProgressBar
        android:id="@+id/pb_waitlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/white"
        android:visibility="gone" />

</LinearLayout>
