<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnl_items_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f2deb8"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img_item_purchase"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:contentDescription="@null"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_title_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tilte"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:src="@drawable/money" />

                <TextView
                    android:id="@+id/tv_price_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@null"
                    android:scaleType="fitXY"
                    android:scaleX="1.2"
                    android:scaleY="1.2"
                    android:src="@drawable/dientich" />

                <TextView
                    android:id="@+id/tv_acreage_purchase"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/acreage"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_address_purchase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:hint="@string/decriptipn"
                android:maxLines="1"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>