<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbdde0"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.anhtuan.quanlyphongtro.DangTin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/color_backgroud">

        <ImageView
            android:id="@+id/img_back_cactindadang"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|start"
            android:layout_marginStart="10dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_keyboard_backspace_white_24dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dangtin"
            android:textColor="@color/cardview_light_background"
            android:textSize="30sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themhinhanh"
            android:textSize="15sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/img_camera_dangtin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/camera" />


        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/thongtincoban"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_nhap"
            android:baselineAligned="false"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:ignore="NestedWeights">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tieude"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/giaphong"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dientich"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dienthoai"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diachi"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="UselessParent">

                    <EditText
                        android:id="@+id/tv_tieude"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@drawable/shape_nhap"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/tv_giaphong"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@drawable/shape_nhap"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/tv_dientich"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@drawable/shape_nhap"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/tv_dienthoai"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@drawable/shape_nhap"
                        android:inputType="number"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                    <EditText
                        android:id="@+id/tv_diachi"
                        android:layout_width="match_parent"
                        android:layout_height="20dp"
                        android:background="@drawable/shape_nhap"
                        android:inputType="text"
                        android:textSize="15sp"
                        tools:ignore="LabelFor" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/motathem"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_mota"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_nhap"
                android:inputType="text"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_dangtin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_dangtin"
            android:text="@string/dangtin"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/lnl_dangtin_cactindadang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/them_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangtin"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/lnl_trangchu_cactindadang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/home_icon2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trangchu"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:id="@+id/lnl_canhan_cactindadang"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@null"
                android:src="@drawable/user_male" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/canhan"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>