<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbdde0"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.example.anhtuan.quanlyphongtro.postpurchase.PostPurchaseFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/color_backgroud"
        android:gravity="center"
        android:text="@string/dangtin"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/themhinhanh"
            android:textSize="15sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lnl_insert_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/img_camera1_postpurchase"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_library_add_white_48dp" />

            <ImageView
                android:id="@+id/img_camera2_postpurchase"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_library_add_white_48dp" />

            <ImageView
                android:id="@+id/img_camera3_postpurchase"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/ic_library_add_white_48dp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thongtincoban"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="7"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:ignore="NestedWeights">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:background="@drawable/shape_nhap"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/tieude"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_title_postpurchase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/giaphong"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_price_postpurchase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dientich"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_acreage_postpurchase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/dienthoai"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_phone_postpurchase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="LabelFor,TextFields" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/diachi"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/edt_address_postpurchase"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:background="@android:color/transparent"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="15sp"
                    tools:ignore="LabelFor" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:ignore="NestedWeights">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/motathem"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_decription_postpurchase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/shape_nhap"
                android:inputType="textMultiLine"
                tools:ignore="LabelFor" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save_postpurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button_dangtin"
            android:text="@string/luu"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_postpurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_button_dangtin"
            android:text="@string/dangtin"
            android:textAllCaps="false"
            android:textColor="@color/cardview_light_background"
            android:textSize="20sp"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
